<resources>
    <string name="app_name">Edgar App Project</string>
    <string name="tvLogin" translatable="false">TEAM\nMANAGER</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="showPass">Show Password</string>
    <string name="fgPass">Forget Password?</string>
    <string name="btnLog">Sign in</string>
    <string name="saludo">Welcome</string>
    <string name="carga">Loading...</string>
    <string name="user">USER: </string>
    <string name="tvAlineacion">LINE UP</string>
    <string name="tvPlayers">PLAYERS</string>
    <string name="alineacion">Create your own soccer lineup according to the players you choose.</string>
    <string name="jugadores">Add, call, edit and delete players for your team.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="newPlayer">New Player</string>
    <string name="namePlayer">Name:</string>
    <string name="positionPlayer">Position:</string>
    <string name="phone">Phone number:</string>
    <string name="numberPlayer">Number:</string>
    <string name="addPlayer">Create player</string>
    <string name="recInfo">I want to receive information \n about updates.</string>
    <string name="about">App Info</string>
    <string name="autor" translatable="false">Edgar Garcia</string>
    <string name="centre" translatable="false">IES Simarro</string>
    <string name="team" translatable="false">TEAM</string>
    <string name="manager" translatable="false">MANAGER</string>
    <string name="version" translatable="false">0.1.1</string>
    <string name="theme">Pro Theme</string>
    <string name="theme2">Looser Theme</string>
    <string name="def" translatable="false">Default</string>
    <string name="change">Change</string>
    <string name="editPlayer">Edit player</string>

</resources>
