<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityInfo"
    android:background="@drawable/fondo_infodef"
    >

    <GridLayout
        android:id="@+id/gridLayout"
        style="@style/estilGrid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001">


        <TextView
            android:id="@+id/textView2"
            style="@style/tvInfo" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/team"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView5"
            style="@style/estilImgInfo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/manager"

            android:textColor="@color/white"

            />

        <TextView
            android:id="@+id/textView5"
            style="@style/tvsInfo"
            android:layout_gravity="left"
            android:text="@string/autor"

            />

        <TextView
            android:id="@+id/textView6"
            style="@style/tvsInfo"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
             />

        <TextView
            android:id="@+id/textView7"
            style="@style/tvsInfo"
            android:text="@string/centre"
            />


    </GridLayout>

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/estilCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />


</androidx.constraintlayout.widget.ConstraintLayout>