<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relMenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/temaMenu"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <View android:id="@+id/fondoMenu" style="@style/FondoMenuTema" />

    <TextView
        android:id="@+id/tvUsuario"
        style="@style/tvMenuUser" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsuario"
        >
        <TableRow android:id="@+id/opAlineacion" android:layout_margin="20dp">

            <LinearLayout
                style="@style/cardViewsMenu1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/imgViewMenu"
                    android:src="@drawable/img_alineacion"
                    />

                <LinearLayout style="@style/linearMenu">


                    <TextView
                        android:id="@+id/tvAlineacion"
                        style="@style/tvLinearsMenu"
                        android:text="@string/tvAlineacion"

                        />

                    <TextView android:id="@+id/tvDescAlineacion"
                        style="@style/tvDescMenu"
                        android:text="@string/alineacion" />

                </LinearLayout>
            </LinearLayout>

        </TableRow>

        <TableRow android:id="@+id/opJugadores" android:layout_margin="20dp">
            <LinearLayout
                style="@style/cardViewsMenu1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/imgViewMenu"
                    android:src="@drawable/img_listajugadores"

                    />

                <LinearLayout style="@style/linearMenu">


                    <TextView
                        android:id="@+id/tvJugadores"
                        style="@style/tvLinearsMenu"
                        android:text="@string/tvPlayers"
                        />

                    <TextView
                        android:id="@+id/tvDescJugadores"
                        style="@style/tvDescMenu"
                        android:text="@string/jugadores" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@color/inpColor"
        >

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="@color/grisOscuro"
            />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme2"
            android:textColor="@color/grisOscuro"
            />

        <RadioButton
            android:id="@+id/rbDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textColor="@color/grisOscuro"
            />
    </RadioGroup>

</RelativeLayout>